--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ numpy==2.4.2
 packaging==26.0
 pandas==3.0.0
 pillow==12.1.1
+psycopg2-binary==2.9.11
 pyparsing==3.3.2
 python-dateutil==2.9.0.post0
 scikit-learn==1.8.0
