--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.11.1
+charset-normalizer==3.4.4
 contourpy==1.3.3
 cycler==0.12.1
 dj-database-url==3.1.1
@@ -16,6 +17,7 @@ pillow==12.1.1
 psycopg2-binary==2.9.11
 pyparsing==3.3.2
 python-dateutil==2.9.0.post0
+reportlab==4.4.10
 scikit-learn==1.8.0
 scipy==1.17.0
 six==1.17.0
